--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "mysql2": "^2.3.3",
+    "serverless-http": "^3.0.1",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.3.0",
     "xss-clean": "^0.1.1",
